Add support link to footer in index.html
Added a call to support the creator via BuyMeACoffee link.

--- a/finsent/Frontend/index.html
+++ b/finsent/Frontend/index.html
@@ -317,7 +317,7 @@
         </div>
 
         <div class="footer">
-            <p>Information is not to be taken for financial advice.</p>
+            <p>Information is not to be taken for financial advice. Consider supporting the creator at <p><a href="https://www.buymeacoffee.com/noahcowley">BuyMeACoffee!</a></p></p>
         </div>
     </div>
 </body>
