Update subtitle in index.html

--- a/finsent/Frontend/index.html
+++ b/finsent/Frontend/index.html
@@ -289,7 +289,7 @@
 
         <div class="hero">
             <h1>Finsent</h1>
-            <p class="subtitle">Catholic financial intelligence tools to efficiently analyze market information.</p>
+            <p class="subtitle">Free financial intelligence tools :).</p>
         </div>
 
         <div class="features-grid">
