--- a/finsent/Frontend/index.html
+++ b/finsent/Frontend/index.html
@@ -130,16 +130,16 @@
 
         .features-grid {
             display: grid;
-            grid-template-columns: repeat(2, 1fr);
+            grid-template-columns: repeat(3, 1fr);
             gap: 32px;
-            max-width: 900px;
+            max-width: 1100px;
             margin: 0 auto;
         }
 
         .feature-card {
             background: var(--card-bg);
             border-radius: 20px;
-            padding: 48px 40px;
+            padding: 40px 32px;
             box-shadow: 0 1px 3px var(--shadow);
             border: 1px solid var(--border);
             transition: all 0.3s ease;
@@ -155,7 +155,7 @@
         }
 
         .feature-card h2 {
-            font-size: 1.5rem;
+            font-size: 1.375rem;
             font-weight: 700;
             color: var(--primary);
             margin-bottom: 12px;
@@ -163,9 +163,9 @@
         }
 
         .feature-card p {
-            font-size: 1rem;
+            font-size: 0.9375rem;
             color: var(--secondary);
-            margin-bottom: 32px;
+            margin-bottom: 28px;
             flex-grow: 1;
             line-height: 1.7;
         }
@@ -175,8 +175,8 @@
             align-items: center;
             justify-content: center;
             gap: 8px;
-            padding: 14px 28px;
-            font-size: 15px;
+            padding: 12px 24px;
+            font-size: 14px;
             font-weight: 600;
             font-family: 'Inter', sans-serif;
             background: var(--primary);
@@ -196,8 +196,8 @@
         }
 
         .feature-btn svg {
-            width: 18px;
-            height: 18px;
+            width: 16px;
+            height: 16px;
             transition: transform 0.2s ease;
         }
 
@@ -217,10 +217,25 @@
             color: var(--secondary);
         }
 
-        @media (max-width: 768px) {
+        .footer a {
+            color: var(--primary);
+            text-decoration: none;
+            font-weight: 500;
+        }
+
+        .footer a:hover {
+            text-decoration: underline;
+        }
+
+        @media (max-width: 968px) {
             .features-grid {
                 grid-template-columns: 1fr;
                 gap: 24px;
+                max-width: 500px;
+            }
+
+            .feature-card {
+                padding: 36px 28px;
             }
 
             .hero h1 {
@@ -229,10 +244,6 @@
 
             .hero .subtitle {
                 font-size: 1.1rem;
-            }
-
-            .feature-card {
-                padding: 36px 28px;
             }
 
             .navbar {
@@ -281,6 +292,7 @@
             <a href="/" class="nav-link active">Dashboard</a>
             <a href="/sentiment" class="nav-link">Sentiment</a>
             <a href="/financials" class="nav-link">Financials</a>
+            <a href="/insider" class="nav-link">Insider</a>
         </div>
     </nav>
 
@@ -314,10 +326,21 @@
                     </svg>
                 </a>
             </div>
+
+            <div class="feature-card">
+                <h2>Insider Trading</h2>
+                <p>Track insider buying and selling activity, institutional ownership changes, and detect cluster transactions that may signal company confidence or concern.</p>
+                <a href="/insider" class="feature-btn">
+                    Launch Insider
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M13 7l5 5m0 0l-5 5m5-5H6" />
+                    </svg>
+                </a>
+            </div>
         </div>
 
         <div class="footer">
-            <p>Information is not to be taken for financial advice. Consider supporting the creator at <p><a href="https://www.buymeacoffee.com/noahcowley">BuyMeACoffee!</a></p></p>
+            <p>Information is not to be taken for financial advice. Consider supporting the creator at <a href="https://www.buymeacoffee.com/noahcowley">BuyMeACoffee!</a></p>
         </div>
     </div>
 </body>
