Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/finsent/Frontend/sentiment.html
+++ b/finsent/Frontend/sentiment.html
@@ -637,10 +637,11 @@
 <body>
     <nav class="navbar">
         <div class="nav-links">
-            <a href="/" class="nav-link">Dashboard</a>
-            <a href="/sentiment" class="nav-link active">Sentiment</a>
-            <a href="/financials" class="nav-link">Financials</a>
-        </div>
+    <a href="/" class="nav-link">Dashboard</a>
+    <a href="/sentiment" class="nav-link">Sentiment</a>
+    <a href="/financials" class="nav-link">Financials</a>
+    <a href="/insider" class="nav-link">Insider</a>
+</div>
     </nav>
 
     <div class="container">
@@ -969,4 +970,5 @@
     </script>
 </body>
 </html>
+
 
