Add 'Insider' link to financials navigation

--- a/finsent/Frontend/financials.html
+++ b/finsent/Frontend/financials.html
@@ -704,10 +704,11 @@
 <body>
     <nav class="navbar">
         <div class="nav-links">
-            <a href="/" class="nav-link">Dashboard</a>
-            <a href="/sentiment" class="nav-link">Sentiment</a>
-            <a href="/financials" class="nav-link active">Financials</a>
-        </div>
+    <a href="/" class="nav-link">Dashboard</a>
+    <a href="/sentiment" class="nav-link">Sentiment</a>
+    <a href="/financials" class="nav-link">Financials</a>
+    <a href="/insider" class="nav-link">Insider</a>
+</div>
     </nav>
 
     <div class="container">
