--- a/finsent/Frontend/insider.html
+++ b/finsent/Frontend/insider.html
@@ -1176,22 +1176,22 @@
                     <div class="explainer-inner">
                         <div class="explainer-item">
                             <h4>Insider Purchases (Bullish Signal)</h4>
-                            <p>When executives buy shares with their own money, it often indicates confidence in the company's future. Cluster buying—multiple insiders buying around the same time—is considered particularly significant.</p>
+                            <p>When executives buy shares of their own company in clusters (multiple people buying in a short period of time), it is likely that the company is performing well.</p>
                         </div>
                         <div class="explainer-item">
-                            <h4>Insider Sales (Context Required)</h4>
-                            <p>Sales are common and often occur for personal reasons: diversification, tax planning, home purchases, or scheduled trading plans (10b5-1). Concentrated or unusual selling may warrant attention, but sales alone don't indicate bearishness.</p>
+                            <h4>Insider Sales</h4>
+                            <p>Sales are common and occur for personal reasons: diversification, tax planning, personal purchases, and trading plans. Concentrated or unusual selling can be a bearish indicator, though it's not certain.</p>
                         </div>
                         <div class="explainer-item">
                             <h4>Cluster Transactions</h4>
-                            <p>When multiple insiders buy or sell within a short timeframe, it carries more weight than individual transactions. This coordinated activity may reflect shared information about company prospects.</p>
+                            <p>When multiple insiders buy or sell in a short period of time, its called a cluster transaction. Cluster transactions can indicate intention, cluster selling indicating company weakness, and cluster buying indicating company strength. Cluster transactions shouldn't be taken as a difinitive indicator.</p>
                         </div>
                         <div class="explainer-item">
                             <h4>Institutional Ownership</h4>
-                            <p>High institutional ownership (60%+) typically indicates a well-followed stock. Changes in institutional positions can signal shifting sentiment among professional investors.</p>
+                            <p>High institutional ownership (60% or more) can indicate that a stock is well-followed. Changes in institutional positions can signal shifting sentiment among professional investors.</p>
                         </div>
                         <div class="explainer-note">
-                            Insider trading data comes from SEC Form 4 filings, which must be filed within 2 business days of a transaction. This data should supplement, not replace, fundamental analysis.
+                            Insider trading data comes from SEC Form 4 filings, which arefil ed within 2 business days of a transaction. This data should supplement fundamental analysis, not replace it.
                         </div>
                     </div>
                 </div>
