Refine insider trading feature description
Simplified the description of insider trading feature.

--- a/finsent/Frontend/index.html
+++ b/finsent/Frontend/index.html
@@ -329,7 +329,7 @@
 
             <div class="feature-card">
                 <h2>Insider Trading</h2>
-                <p>Track insider buying and selling activity, institutional ownership changes, and detect cluster transactions that may signal company confidence or concern.</p>
+                <p>Track insider buying and selling activity, institutional ownership changes, and cluster transactions, signaling company confidence or concern.</p>
                 <a href="/insider" class="feature-btn">
                     Launch Insider
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
