Revise Insider Trading subtitle for clarity
Updated the text in the Insider Trading section to clarify the implications of insider transactions.

--- a/finsent/Frontend/insider.html
+++ b/finsent/Frontend/insider.html
@@ -1059,7 +1059,7 @@
             <a href="/" class="nav-link">Dashboard</a>
             <a href="/sentiment" class="nav-link">Sentiment</a>
             <a href="/financials" class="nav-link">Financials</a>
-            <a href="/insider" class="nav-link active">Insider</a>
+            <a href="/insider" class="nav-link active">Insider Trading</a>
         </div>
     </nav>
 
@@ -1068,7 +1068,7 @@
 
         <header>
             <h1>Insider Trading</h1>
-            <p class="subtitle">Track insider transactions and institutional ownership changes. Insider buying often signals confidence, while concentrated selling may warrant attention. Context matters—sales often occur for personal reasons.</p>
+            <p class="subtitle">Track insider transactions and institutional ownership changes. Insider buying often indicates company strength, and clustered insider selling often indicates company weakness. These indications are not definitive.</p>
         </header>
 
         <div class="search-section">
