Rename 'Insider' link to 'Insider Trading'

--- a/finsent/Frontend/index.html
+++ b/finsent/Frontend/index.html
@@ -292,7 +292,7 @@
             <a href="/" class="nav-link active">Dashboard</a>
             <a href="/sentiment" class="nav-link">Sentiment</a>
             <a href="/financials" class="nav-link">Financials</a>
-            <a href="/insider" class="nav-link">Insider</a>
+            <a href="/insider" class="nav-link">Insider Trading</a>
         </div>
     </nav>
 
