--- a/finsent/Frontend/financials.html
+++ b/finsent/Frontend/financials.html
@@ -707,7 +707,7 @@
     <a href="/" class="nav-link">Dashboard</a>
     <a href="/sentiment" class="nav-link">Sentiment</a>
     <a href="/financials" class="nav-link">Financials</a>
-    <a href="/insider" class="nav-link">Insider</a>
+    <a href="/insider" class="nav-link">Insider Trading</a>
 </div>
     </nav>
 
