Update print statement from 'Hello' to 'Goodbye'

--- a/finsent/Frontend/sentiment.html
+++ b/finsent/Frontend/sentiment.html
@@ -640,7 +640,7 @@
     <a href="/" class="nav-link">Dashboard</a>
     <a href="/sentiment" class="nav-link">Sentiment</a>
     <a href="/financials" class="nav-link">Financials</a>
-    <a href="/insider" class="nav-link">Insider</a>
+    <a href="/insider" class="nav-link">Insider Trading</a>
 </div>
     </nav>
 
@@ -970,5 +970,6 @@
     </script>
 </body>
 </html>
+
 
 
