--- a/finsent/Frontend/insider.html
+++ b/finsent/Frontend/insider.html
@@ -505,6 +505,176 @@
             line-height: 1.5;
         }
 
+        /* Cluster Trading Section */
+        .cluster-section {
+            background: var(--card-bg);
+            border-radius: 16px;
+            padding: 32px;
+            box-shadow: 0 1px 3px var(--shadow);
+            border: 1px solid var(--border);
+            margin-bottom: 32px;
+        }
+
+        .cluster-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 24px;
+            padding-bottom: 16px;
+            border-bottom: 1px solid var(--border);
+        }
+
+        .cluster-title {
+            font-size: 14px;
+            font-weight: 600;
+            text-transform: uppercase;
+            letter-spacing: 0.05em;
+            color: var(--secondary);
+        }
+
+        .cluster-count {
+            font-size: 13px;
+            color: var(--secondary);
+        }
+
+        .cluster-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+            gap: 20px;
+        }
+
+        .cluster-card {
+            background: var(--background);
+            border-radius: 12px;
+            padding: 20px;
+            border: 1px solid var(--border);
+            position: relative;
+            overflow: hidden;
+        }
+
+        .cluster-card::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            height: 3px;
+        }
+
+        .cluster-card.positive::before {
+            background: var(--positive);
+        }
+
+        .cluster-card.negative::before {
+            background: var(--negative);
+        }
+
+        .cluster-card-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
+            margin-bottom: 16px;
+        }
+
+        .cluster-type-badge {
+            display: inline-flex;
+            align-items: center;
+            padding: 4px 10px;
+            border-radius: 6px;
+            font-size: 12px;
+            font-weight: 600;
+        }
+
+        .cluster-type-badge.positive {
+            background: var(--positive-light);
+            color: var(--positive-dark);
+        }
+
+        .cluster-type-badge.negative {
+            background: var(--negative-light);
+            color: var(--negative-dark);
+        }
+
+        .cluster-date {
+            font-size: 12px;
+            color: var(--secondary);
+        }
+
+        .cluster-stats {
+            display: flex;
+            gap: 20px;
+            margin-bottom: 16px;
+        }
+
+        .cluster-stat {
+            text-align: center;
+        }
+
+        .cluster-stat-value {
+            font-size: 1.25rem;
+            font-weight: 700;
+            color: var(--primary);
+        }
+
+        .cluster-stat-label {
+            font-size: 11px;
+            color: var(--secondary);
+            text-transform: uppercase;
+            letter-spacing: 0.03em;
+        }
+
+        .cluster-card.positive .cluster-stat-value {
+            color: var(--positive-dark);
+        }
+
+        .cluster-card.negative .cluster-stat-value {
+            color: var(--negative-dark);
+        }
+
+        .cluster-insiders {
+            border-top: 1px solid var(--border);
+            padding-top: 12px;
+        }
+
+        .cluster-insiders-title {
+            font-size: 11px;
+            font-weight: 600;
+            color: var(--secondary);
+            text-transform: uppercase;
+            letter-spacing: 0.03em;
+            margin-bottom: 8px;
+        }
+
+        .cluster-insider-item {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 6px 0;
+            font-size: 13px;
+        }
+
+        .cluster-insider-name {
+            color: var(--primary);
+            font-weight: 500;
+        }
+
+        .cluster-insider-title {
+            color: var(--secondary);
+            font-size: 12px;
+        }
+
+        .cluster-insider-value {
+            color: var(--secondary);
+            font-weight: 500;
+        }
+
+        .no-clusters {
+            padding: 48px 0;
+            text-align: center;
+            color: var(--secondary);
+            font-size: 15px;
+        }
+
         .chart-section {
             background: var(--card-bg);
             border-radius: 16px;
@@ -923,6 +1093,10 @@
                 grid-template-columns: 1fr;
             }
 
+            .cluster-grid {
+                grid-template-columns: 1fr;
+            }
+
             .holder-item {
                 grid-template-columns: 1fr 1fr;
                 gap: 12px;
@@ -975,7 +1149,8 @@
             .company-header,
             .chart-section,
             .transactions-section,
-            .institutional-section {
+            .institutional-section,
+            .cluster-section {
                 padding: 24px;
             }
 
@@ -1147,6 +1322,17 @@
                 <div class="signals-grid" id="signalsGrid"></div>
             </div>
 
+            <!-- Cluster Trading Section -->
+            <div class="cluster-section" id="clusterSection" style="display: none;">
+                <div class="cluster-header">
+                    <div class="cluster-title">Cluster Transactions</div>
+                    <div class="cluster-count" id="clusterCount">0 clusters detected</div>
+                </div>
+                <div class="cluster-grid" id="clusterGrid">
+                    <div class="no-clusters">No cluster transactions detected in this period.</div>
+                </div>
+            </div>
+
             <div class="chart-section">
                 <div class="chart-title">Monthly Activity</div>
                 <div class="chart-container" id="chartContainer">
@@ -1294,6 +1480,7 @@
 
             displaySummary(data.summary, data.sentiment);
             displaySignals(data.signals);
+            displayClusterTransactions(data.cluster_alerts);
             displayChart(data.monthly_data);
             displayTransactions(data.transactions);
             displayInstitutional(data.institutional);
@@ -1347,6 +1534,70 @@
                     <div class="signal-description">${signal.description}</div>
                 `;
                 grid.appendChild(card);
+            });
+        }
+
+        function displayClusterTransactions(clusterAlerts) {
+            const section = document.getElementById('clusterSection');
+            const grid = document.getElementById('clusterGrid');
+            const countEl = document.getElementById('clusterCount');
+
+            if (!clusterAlerts || clusterAlerts.length === 0) {
+                section.style.display = 'none';
+                return;
+            }
+
+            section.style.display = 'block';
+            countEl.textContent = `${clusterAlerts.length} cluster${clusterAlerts.length !== 1 ? 's' : ''} detected`;
+            grid.innerHTML = '';
+
+            clusterAlerts.forEach((cluster, index) => {
+                const card = document.createElement('div');
+                card.className = `cluster-card ${cluster.status}`;
+                card.style.opacity = '0';
+                card.style.transform = 'translateY(10px)';
+
+                const typeLabel = cluster.type === 'cluster_buy' ? 'Cluster Buy' : 'Cluster Sell';
+                const insidersHtml = cluster.insiders ? cluster.insiders.map(insider => `
+                    <div class="cluster-insider-item">
+                        <div>
+                            <span class="cluster-insider-name">${insider.name}</span>
+                            <span class="cluster-insider-title"> - ${insider.title}</span>
+                        </div>
+                        <span class="cluster-insider-value">${insider.value}</span>
+                    </div>
+                `).join('') : '';
+
+                card.innerHTML = `
+                    <div class="cluster-card-header">
+                        <span class="cluster-type-badge ${cluster.status}">${typeLabel}</span>
+                        <span class="cluster-date">${cluster.week_display || cluster.week}</span>
+                    </div>
+                    <div class="cluster-stats">
+                        <div class="cluster-stat">
+                            <div class="cluster-stat-value">${cluster.insider_count}</div>
+                            <div class="cluster-stat-label">Insiders</div>
+                        </div>
+                        <div class="cluster-stat">
+                            <div class="cluster-stat-value">${cluster.total_value_display}</div>
+                            <div class="cluster-stat-label">Total Value</div>
+                        </div>
+                    </div>
+                    ${insidersHtml ? `
+                    <div class="cluster-insiders">
+                        <div class="cluster-insiders-title">Participants</div>
+                        ${insidersHtml}
+                    </div>
+                    ` : ''}
+                `;
+
+                grid.appendChild(card);
+
+                setTimeout(() => {
+                    card.style.transition = 'all 0.3s ease';
+                    card.style.opacity = '1';
+                    card.style.transform = 'translateY(0)';
+                }, index * 100);
             });
         }
 
@@ -1455,8 +1706,8 @@
             const insiderOwnership = document.getElementById('insiderOwnership');
 
             const summary = institutional.summary;
-            instOwnership.textContent = summary.total_institutional ? `${summary.total_institutional}%` : '--';
-            insiderOwnership.textContent = summary.total_insider ? `${summary.total_insider}%` : '--';
+            instOwnership.textContent = summary.total_institutional !== null ? `${summary.total_institutional}%` : '--';
+            insiderOwnership.textContent = summary.total_insider !== null ? `${summary.total_insider}%` : '--';
 
             if (!institutional.holders || institutional.holders.length === 0) {
                 list.innerHTML = '<div class="no-institutional">No institutional holder data available.</div>';
