Revise stock search description for clarity

--- a/finsent/Frontend/index.html
+++ b/finsent/Frontend/index.html
@@ -336,7 +336,7 @@
         <div class="features-grid">
             <div class="feature-card featured">
                 <h2>Stock Search</h2>
-                <p>Comprehensive stock data with interactive charts, key metrics, analyst ratings, financial health indicators, and real-time news — all in one place. The most complete view of any stock.</p>
+                <p>A comprehensive stock search with charts, metrics, ratings, financial health indicators, and real-time news.</p>
                 <a href="/search" class="feature-btn">
                     Launch Search
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
