--- a/finsent/Frontend/search.html
+++ b/finsent/Frontend/search.html
@@ -1058,7 +1058,7 @@
 
         <header>
             <h1>Stock Search</h1>
-            <p class="subtitle">Comprehensive stock data, interactive charts, key metrics, analyst ratings, and real-time news in one place.</p>
+            <p class="subtitle">A comprehensive stock search with charts, metrics, ratings, financial health indicators, and real-time news, sourced from yfinance.</p>
         </header>
 
         <!-- Search Section -->
