--- a/finsent/Frontend/index.html
+++ b/finsent/Frontend/index.html
@@ -884,7 +884,7 @@
 
         <div class="hero">
             <h1>Finsent</h1>
-            <p class="subtitle">Free financial intelligence tools</p>
+            <p class="subtitle">Free financial intelligence tools :)</p>
             <div class="market-status neutral" id="marketStatus">
                 <div class="status-dot"></div>
                 <span id="marketStatusText">Loading...</span>
